--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.7",
+    "@mui/x-charts": "^6.19.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
